DevTools: fix categories alignment. TBR: yurys
git-svn-id: svn://svn.chromium.org/chrome/trunk/src@30953 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: ce60516305408ddff4873e0803b1a9056fea1db5

--- a/webkit/glue/devtools/js/devtools.css
+++ b/webkit/glue/devtools/js/devtools.css
@@ -154,3 +154,7 @@ select.status-bar-item {
 .scope-bar li:active {
     -webkit-box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.0);
 }
+
+.timeline-category-tree-item input {
+    vertical-align: middle;
+}
